src/objects/Ven_Competitors__c.object
<CustomObject>
    <fields>
        <fullName>Ven_Account_Key_Player_Competition__c</fullName>
        <description>Der Account zu dem der Competitor eingetragen werden soll wird hier erfasst.</description>
        <inlineHelpText>Der Account zu dem der Competitor eingetragen werden soll wird hier erfasst.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Key Players &amp; Competitions</relationshipLabel>
        <relationshipName>Key_Players_Competitions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ven_Competitor__c</fullName>
        <description>Hier wird der Competitor zur Account erfasst. Der Competitor muss nicht als Account in Salesforce erfasst werden.</description>
        <inlineHelpText>Hier wird der Competitor zur Account erfasst. Der Competitor muss nicht als Account in Salesforce erfasst werden.</inlineHelpText>
        <label>Competitor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ven_Informationen_zum_competitor__c</fullName>
        <description>Hier werden Informationen zum Competitor der verlinkten Accounts angetragen.
Für Seven Ventures.</description>
        <inlineHelpText>Hier bitte Informationen zum Competitor zur verknüpften Account eintragen.</inlineHelpText>
        <label>Informationen zum Competitor</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Key Players &amp; Competition</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
    </listViews>
    <nameField>
        <displayFormat>KPC-{00000000}</displayFormat>
        <label>Key Players &amp; Competition-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Players &amp; Competitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>